--- a/src/main/resources/ClientRegistration.fxml
+++ b/src/main/resources/ClientRegistration.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.ClientRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;">
            <children>
                <Label alignment="CENTER" layoutX="104.0" layoutY="14.0" text="Client Registration">
                    <font>
@@ -50,7 +52,7 @@
                        <Font size="11.0" />
                    </font>
                </Label>
-               <Button fx:id="submit" layoutX="171.0" layoutY="465.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="36.0" prefWidth="80.0" style="-fx-background-color: #4bb6d6;" text="Submit">
+               <JFXButton fx:id="Submit" buttonType="RAISED" layoutX="161.0" layoutY="467.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Submit">
                    <font>
                        <Font size="15.0" />
                    </font>
@@ -64,17 +66,25 @@
                            </input>
                        </DropShadow>
                    </effect>
-               </Button>
-            <Hyperlink fx:id="goBackToChoice" layoutX="14.0" layoutY="483.0" onMouseClicked="#switchBackToChoice" text="&lt;Back" />
+               </JFXButton>
+            <Hyperlink fx:id="goBackToChoice" layoutX="-1.0" layoutY="490.0" onMouseClicked="#switchBackToChoice" text="&lt;Back" />
             <Text fx:id="registrationMessage" layoutX="11.0" layoutY="432.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="400.0" />
             <TextField fx:id="birthDate" layoutX="164.0" layoutY="177.0" prefHeight="25.0" prefWidth="219.0" promptText="Date Format MM/dd/yyyy" />
-            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="11.0" layoutY="436.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="400.0" textAlignment="CENTER" />
+            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="11.0" layoutY="436.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="400.0" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor></Hyperlink>
             <TextField fx:id="cnp" layoutX="241.0" layoutY="223.0" prefHeight="25.0" prefWidth="142.0" promptText="13 digits" />
             <Label layoutX="15.0" layoutY="223.0" text="Personal Identification Number">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
+            <ImageView fx:id="exit" fitHeight="24.0" fitWidth="24.0" layoutX="395.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/exit.png" />
+               </image>
+            </ImageView>
            </children>
        </AnchorPane>
    </children>
