--- a/src/main/resources/IndividualPRegistration.fxml
+++ b/src/main/resources/IndividualPRegistration.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <StackPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.CarLounge.fis.controller.IndividualPRegistrationController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="579.0" prefWidth="421.0" style="-fx-background-color: #87ceeb;">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="579.0" prefWidth="421.0" style="-fx-background-color: #D1E4F9;">
          <children>
             <Label alignment="CENTER" layoutX="152.0" layoutY="14.0" text="Individual">
                <font>
@@ -43,7 +45,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Hyperlink fx:id="goBackToProviderR" layoutX="13.0" layoutY="542.0" onMouseClicked="#switchBackToProviderR" text="&lt;Back" />
+            <Hyperlink fx:id="goBackToProviderR" layoutX="-1.0" layoutY="557.0" onMouseClicked="#switchBackToProviderR" text="&lt;Back" />
             <TextField fx:id="firstname" layoutX="162.0" layoutY="131.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Radu" />
             <TextField fx:id="lastname" layoutX="281.0" layoutY="131.0" prefHeight="25.0" prefWidth="99.0" promptText="E.g. Mladin" />
             <Label layoutX="17.0" layoutY="184.0" text="Birth Date">
@@ -57,7 +59,7 @@
                </font>
             </Label>
             <TextField fx:id="phoneNo" layoutX="161.0" layoutY="232.0" prefHeight="25.0" prefWidth="219.0" />
-            <Button fx:id="Submit" layoutX="171.0" layoutY="524.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="36.0" prefWidth="80.0" style="-fx-background-color: #4bb6d6;" text="Submit">
+            <JFXButton fx:id="Submit" buttonType="RAISED" layoutX="161.0" layoutY="532.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Submit">
                <font>
                   <Font size="15.0" />
                </font>
@@ -71,7 +73,7 @@
                      </input>
                   </DropShadow>
                </effect>
-            </Button>
+            </JFXButton>
             <Label layoutX="15.0" layoutY="277.0" text="Personal Identification Number">
                <font>
                   <Font size="16.0" />
@@ -79,8 +81,16 @@
             </Label>
             <TextField fx:id="birthDate" layoutX="161.0" layoutY="184.0" prefHeight="25.0" prefWidth="219.0" promptText="Date Format MM/dd/yyyy" />
             <Text fx:id="registrationMessage" layoutX="4.0" layoutY="491.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="414.0" />
-            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="4.0" layoutY="495.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="414.0" textAlignment="CENTER" />
+            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="4.0" layoutY="495.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="414.0" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor></Hyperlink>
             <TextField fx:id="cnp" layoutX="243.0" layoutY="277.0" prefHeight="25.0" prefWidth="136.0" promptText="13 digits" />
+            <ImageView fx:id="exit" fitHeight="24.0" fitWidth="24.0" layoutX="395.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/exit.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </children>
