--- a/src/main/resources/LegalPersonRegistration.fxml
+++ b/src/main/resources/LegalPersonRegistration.fxml
@@ -45,7 +45,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <Hyperlink fx:id="goBackToProviderR" layoutX="13.0" layoutY="526.0" onMouseClicked="#switchBackToProviderR" text="&lt;Back" />
+            <Hyperlink fx:id="goBackToProviderR" layoutX="-1.0" layoutY="540.0" onMouseClicked="#switchBackToProviderR" text="&lt;Back" />
             <TextField fx:id="companyName" layoutX="164.0" layoutY="270.0" prefHeight="25.0" prefWidth="219.0" promptText="E.g. Shelby Limited" />
             <Label alignment="CENTER" layoutX="17.0" layoutY="316.0" text="Address">
                <font>
@@ -57,7 +57,7 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <JFXButton fx:id="Submit" buttonType="RAISED" layoutX="156.0" layoutY="491.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Submit">
+            <JFXButton fx:id="Submit" buttonType="RAISED" layoutX="156.0" layoutY="510.0" mnemonicParsing="false" onMouseClicked="#sendReg" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 50px;" text="Submit">
                <font>
                   <Font size="15.0" />
                </font>
@@ -81,7 +81,10 @@
             </Label>
             <TextField fx:id="taxRegNo" layoutX="206.0" layoutY="408.0" prefHeight="25.0" prefWidth="176.0" />
             <Text fx:id="registrationMessage" layoutX="22.0" layoutY="453.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="376.13671875" />
-            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="22.0" layoutY="453.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="376.0" textAlignment="CENTER" />
+            <Hyperlink fx:id="logIn" alignment="CENTER" layoutX="22.0" layoutY="453.0" onMouseClicked="#goToLogIn" prefHeight="23.0" prefWidth="376.0" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor></Hyperlink>
             <ImageView fx:id="exit" fitHeight="24.0" fitWidth="24.0" layoutX="395.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Images/exit.png" />
